--- a/ComposeApplication/app/src/main/AndroidManifest.xml
+++ b/ComposeApplication/app/src/main/AndroidManifest.xml
@@ -14,17 +14,26 @@
         <activity
             android:name=".ViewDemoActivity"
             android:exported="false"
-            android:label="@string/title_activity_view_demo"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
 
         <activity
             android:name=".MainActivity"
             android:exported="false"
-            android:label="@string/title_activity_view_demo"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
 
         <activity
             android:name=".ModifierDemoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_view_demo"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+        <activity
+            android:name=".ButtonDemoActivity"
+            android:exported="false"
+            android:label="@string/title_activity_view_demo"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+
+        <activity
+            android:name=".EditTextDemoActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeApplication.NoActionBar">
