--- a/ComposeApplication/app/build.gradle
+++ b/ComposeApplication/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.0-alpha06'
@@ -65,5 +66,5 @@ dependencies {
 
     implementation 'io.coil-kt:coil:1.4.0'
     implementation 'io.coil-kt:coil-compose:1.4.0'
-    implementation 'com.google.accompanist:accompanist-pager:0.21.1-beta'
+    implementation 'com.google.accompanist:accompanist-pager:0.23.1'
 }
