--- a/ComposeApplication/app/src/main/AndroidManifest.xml
+++ b/ComposeApplication/app/src/main/AndroidManifest.xml
@@ -12,28 +12,48 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComposeApplication">
         <activity
+            android:name=".EditTextDemoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication" />
+        <activity
+            android:name=".CustomComposeActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+        <activity
+            android:name=".NativeActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewDemoActivity"
             android:exported="false"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
-
         <activity
             android:name=".MainActivity"
             android:exported="false"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
-
         <activity
             android:name=".ModifierDemoActivity"
             android:exported="false"
-            android:label="@string/title_activity_view_demo"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
         <activity
             android:name=".ButtonDemoActivity"
             android:exported="false"
-            android:label="@string/title_activity_view_demo"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+        <activity
+            android:name=".RememberActivity"
+            android:exported="false"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
 
         <activity
-            android:name=".EditTextDemoActivity"
+            android:name=".NoStatusAndStatusUpAndOneWayDataFlowActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+
+        <activity
+            android:name=".MutableStateActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+        <activity
+            android:name=".ComposePerformanceDangerActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeApplication.NoActionBar">
