--- a/ComposeApplication/app/build.gradle
+++ b/ComposeApplication/app/build.gradle
@@ -82,5 +82,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     // Lifecycles only (without ViewModel or LiveData)
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
 
 }
