--- a/ComposeApplication/app/src/main/AndroidManifest.xml
+++ b/ComposeApplication/app/src/main/AndroidManifest.xml
@@ -60,9 +60,18 @@
             android:name=".ReComposeActivity"
             android:exported="false"
             android:theme="@style/Theme.ComposeApplication.NoActionBar" />
-
         <activity
             android:name=".DerivedStateOfAndRememberActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+
+        <activity
+            android:name=".CompositionLocalActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ComposeApplication.NoActionBar" />
+
+        <activity
+            android:name=".ComposeToNativeActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ComposeApplication.NoActionBar">
